syntax="proto3";

message UserGet {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string dialCode = 4;
  string phone = 5;
  string address = 6;
  string zipCode = 7;
  string city = 8;
  string country = 9;
  string dob = 10;
  string avatarUrl = 11;
  bytes referred = 12;
  bool tosAgreement = 13;
  string registeredAt = 14;
  string updatedAt = 15;
  string role = 16;

  message Confirmed {
    string email = 1;
    string phone = 2;
  }
  message Social {
    message Facebook {
      string id = 1;
      string nickName = 2;
      string picture = 3;
    }
    message Google {
      string id = 1;
      string nickName = 2;
      string picture = 3;
    }
    message Twitter {
      string id = 1;
      string nickName = 2;
      string picture = 3;
    }
    message Linkedin {
      string id = 1;
      string nickName = 2;
      string picture = 3;
    }
  }
}
